# fasttts-api

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  async_server.py  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  server.py
.github/workflows/: docker-image.yml
lib/: __init__.py
lib/RealtimeTTS/: __init__.py  text_to_stream.py
lib/RealtimeTTS/engines/: __init__.py  chinese.json  coqui_default_voice.json  edge_engine.py  elevenlabs_engine.py  female.json  neutts_engine.py  zipvoice_engine.py
scripts/: web_vlm_tts.py  web_vlm_tts_optimized.py  websocket_chunk_test.py  websocket_client.py  websocket_llm_chunk_test.py  websocket_vlm_chunk_sentence_boundaries_test.py  websocket_vlm_chunk_test.py
src/fasttts/: __init__.py  app.py  config.py
src/fasttts/engines/: __init__.py
src/fasttts/routes/: __init__.py  tts.py  voices.py  websocket.py
src/fasttts/services/: __init__.py  audio.py  synthesis.py
src/fasttts/utils/: __init__.py
static/: tts.js
tests/: __init__.py  conftest.py
