[project]
name = "fasttts"
version = "0.1.0"
description = "A Text-to-Speech API server supporting multiple TTS engines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi[all]>=0.128.0",
    "pydub>=0.25.0",
    "websockets>=12.0",
    "pocket-tts>=1.0.1",
    "sounddevice>=0.5.3",
    "numpy>=2.2.6",
    # "google-genai>=1.60.0",
    # "rich>=13.0.0",
    "pyaudio>=0.2.14",
    "resampy>=0.4.3",
    "stream2sentence>=0.3.1",
]

[project.scripts]
fasttts = "fasttts.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fasttts = ["py.typed"]
